vlib/v/checker/tests/voidptr_struct_assign_fn_ptr_err.out
vlib/v/checker/tests/voidptr_struct_assign_fn_ptr_err.vv:15:3: error: cannot assign to field `func`: expected a pointer `voidptr`, but got `&fn ()`
   13 | 
   14 |     _ := &StructVoidptr{
   15 |         func: &fun
      |         ~~~~~~~
   16 |     }
   17 | }
