vlib/v/checker/tests/voidptr_struct_assign_fn_ptr_err.vv
module main

struct StructVoidptr {
	func voidptr
}

fn function() {
	println('Function!')
}

fn main() {
	fun := function

	_ := &StructVoidptr{
		func: &fun
	}
}
